# iris

./: .gitignore  2  CMakeLists.txt  LICENSE.md  Makefile  README.md
include/: iris.hpp
include/iris/: iris.hpp
src/: iris.cpp  layer.cpp  main.cpp  matrix.cpp  network.cpp  neuron.cpp  utils.cpp
src/iris/: iris.cpp
